2010-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : implement LookupPositionalParameters().

2010-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlObjectReader.cs : use Type, not TargetType.

2010-04-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : do not return index property.
	* TypeExtensionMethods.cs : return Initialization only for value nodes.
	* XamlObjectReader.cs : member content can be either a value or a new
	  object. Fix certain EndObject transition to become EndMember, not
	  EndObject twice.

2010-04-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlObjectReader.cs, XamlSchemaContext.cs, XamlLanguage.cs:
	  collect namespace declarations first. Remove extra [XmlnsPrefix]
	  on the assembly, and handle it specially in GetPreferredPrefix(),

2010-04-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlObjectReader.cs : check constructible type. Remove extra ns node.

2010-04-18  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : ignore ReferenceConverter which is used for IList<T>.

2010-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : cache member lookup.

2010-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlMember.cs : cosmetic equivalence change.

2010-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlXmlReader.cs : Resolve generic type names. Process attribute
	  members.
	* XamlLanguage.cs : add XamlTypeName-to-ClrType method.
	* XmlSchemaContext.cs : extracted special type name handling to above.

2010-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : sort of reverted AllowedContentTypes.
	  msdn explanation is so wrong.

2010-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlSchemaContext.cs : implement GetXamlDirective().

2010-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlType.cs : implement AllowedContentTypes and ContentWrappers.

2010-04-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XamlXmlReader.cs : handle types in clr-namespace.