@@ -1,5 +1,10 @@
 2010-04-20  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* XamlObjectReaderTest.cs : added a bunch of read detail tests (lots
+	  on not-working ones).
+
+2010-04-20  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* XamlTypeTest.cs : added tests for GetPositionalParameters().
 
 2010-04-18  Atsushi Enomoto  <atsushi@ximian.com>
